--- a/presto-yarn-test/pom.xml
+++ b/presto-yarn-test/pom.xml
@@ -18,7 +18,7 @@
      limitations under the License.
   -->
     <parent>
-        <groupId>com.teradata.presto-yarn</groupId>
+        <groupId>io.prestosql.presto-yarn</groupId>
         <artifactId>presto-yarn</artifactId>
         <version>1.6-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
