--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <hadoop.version>3.2.1</hadoop.version>
         <lombok.version>1.18.20</lombok.version>
-        <datax.version>0.0.1</datax.version>
-        <fastjson.version>1.2.76</fastjson.version>
+        <hutool.version>5.8.4</hutool.version>
         <lang3.version>3.11</lang3.version>
     </properties>
 
@@ -38,6 +37,13 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
